@@ -25,12 +25,12 @@ if (!preg_match('/^[0-9]+$/i', $_POST['zoneId']) || $_POST['zoneId'] == 0) 	 { $
 # validate $_POST['deviceId'] values
 if ($_POST['deviceId'] && !preg_match('/^[0-9]+$/i', $_POST['deviceId'])) 	 { $Result->show("danger", _("Invalid device ID. Do not manipulate the POST values!"), true); }
 
-# check the zone alias. valid values are alphanumeric characters and special characters like ".-_ "
-if($_POST['alias'] && !preg_match('/^[0-9a-zA-Z.\/\-_ ]+$/i',$_POST['alias'])) {
+# check the zone alias. valid values are alphanumeric characters and special characters like ".-_: "
+if($_POST['alias'] && !preg_match('/^[0-9a-zA-Z.\/\-_ :]+$/i',$_POST['alias'])) {
 	$Result->show("danger", _("Invalid zone alias value."), true);
 }
-# check the interface name. valid values are alphanumeric characters and special characters like ".-_/ "
-if($_POST['interface'] && !preg_match('/^[0-9a-zA-Z.\/\-_ ]+$/i',$_POST['interface'])) {
+# check the interface name. valid values are alphanumeric characters and special characters like ".-_/: "
+if($_POST['interface'] && !preg_match('/^[0-9a-zA-Z.\/\-_ :]+$/i',$_POST['interface'])) {
 	$Result->show("danger", _("Invalid interface."), true);
 }
 
